# linerate

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  renovate.json
.github/workflows/: deploy.yml  tests.yml
docs/: api.rst  conf.py  index.rst  refs.bib
docs/_static/css/: custom.css
docs/api/: model.rst  solver.rst  types.rst
docs/api/equations/: convective_cooling.rst  dimensionless.rst  index.rst  joule_heating.rst  math.rst  radiative_cooling.rst  solar_angles.rst  solar_heating.rst
docs/api/equations/cigre207/: convective_cooling.rst  solar_heating.rst
docs/api/equations/cigre601/: convective_cooling.rst  solar_heating.rst
docs/api/equations/ieee738/: convective_cooling.rst  solar_heating.rst
examples/: plot_cigre.py  plot_solar_heating_comparison.py  plot_solar_radiation.py
linerate/: __init__.py  _compat_utils.py  conductor_params_defaults.py  conductor_params_finder.py  conductors_standard.csv  domain.py  example_module.py  helper.py  model.py  solver.py  types.py  units.py
linerate/equations/: __init__.py  convective_cooling.py  dimensionless.py  geodesic.py  geodesy.py  heat_capacity.py  joule_heating.py  math.py  radiative_cooling.py  solar_angles.py  solar_heating.py
linerate/equations/cigre207/: __init__.py  ac_resistance.py  convective_cooling.py  solar_heating.py
linerate/equations/cigre601/: __init__.py  convective_cooling.py  joule_heating.py  radiative_cooling.py  solar_heating.py
linerate/equations/ieee738/: __init__.py  convective_cooling.py  solar_heating.py
linerate/models/: Cigre207.md  cigre207.py  cigre601.py  ieee738.py  thermal_model.py
tests/: conftest.py  test_solver.py
tests/acceptance_tests/: test_cigre_ampacity_cases.py  test_cigre_transient_cases.py  test_ieee_ampacity_cases.py  test_ratekit_ampacity_cases.py  test_thermal_model.py
tests/conductor_params/: test_condutor_params.py
tests/df_helper/: test_helper.py  test_helper_detailed.py
tests/df_helper/fixtures/: dlr_comp_input_1.0.1.pkl  dlr_comp_output_1.0.1.pkl  slr_comp_output_1.0.1.pkl
tests/equations/: test_convective_cooling.py  test_dimensionless.py  test_geodesic.py  test_geodesy.py  test_heat_capacity.py  test_joule_heating.py  test_math.py  test_radiative_cooling.py  test_solar_angles.py  test_solar_heating.py
tests/equations/cigre207/: test_convective_cooling.py
tests/equations/cigre601/: test_angle_of_attack.py  test_convective_cooling.py  test_joule_heating.py  test_radiative_cooling.py  test_solar_heating.py
tests/equations/ieee738/: test_convective_cooling.py  test_ieee_convective_cooling.py  test_solar_heating.py
tests/integration_tests/: test_vectorisation.py  test_vectorization.py
tests/models/: test_cigre207.py  test_cigre601.py  test_cigre601_with_solar_radiation.py  test_ieee738.py  test_thermal_model.py
